k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  podSelector:
    matchLabels:
      app: juice-shop

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: juice-shop
      ports:
        - protocol: TCP
          port: 3000
